fix: text, images

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							</p>
 							<div class="es-research--right__container">
 								<div class="es-research--right--text">
-									<p class="es-research--right--text-percent">-98<sup>%</sup></p>
+									<p class="es-research--right--text-percent">98<sup>%</sup></p>
 									<p class="es-research--right--text-info"><span>badanych osób <br>potwierdza, że produkt</span><br>
 										natychmiastowo<br>
 										i łagodnie<br>
@@ -174,7 +174,7 @@
 									</div>
 									<div class="es-research--right--text">
 										<p class="es-research--right--text-percent small-margin">-45<sup>%</sup></p>
-										<p class="es-research--right--text-info">mniej wągrów<br>
+										<p class="es-research--right--text-info">mniej wągrów<sup>2</sup><br>
 										</p>
 									</div>
 								</div>
@@ -286,7 +286,7 @@
 							<div class="swiper-slide">
 								<div class="es-cross__single">
 									<div class="es-cross__single--img">
-										<img src="./images/packshot.png"
+										<img src="./images/balsam.png"
 												 alt="balsam">
 									</div>
 									<div class="es-cross__single--text--wrapper">
